Fix chart spacing

--- a/src/less/_components.charts.less
+++ b/src/less/_components.charts.less
@@ -3,6 +3,10 @@
 //use absolute hack to stop bouncing
 .chart-container {
   .aspect-ratio(100, 64);
+  svg {
+    max-width: 100%;
+    padding: 0.5em;
+  }
 }
 
 .multi-chart {
@@ -28,4 +32,3 @@
     }
   }
 }
-
